<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Navigator</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">Disabilities</string>
    <string name="title_section3">Content</string>
    <string name="title_section4">Server</string>
    <string name="title_section5">Preferences</string>
    <string name="title_section6">Help</string>
    <string name="title_section7">About</string>

    <string name="title_activity_help">Help</string>
    <string name="title_activity_gets_login">Sign in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="str_data_refresh_failed">Cannot load data from server</string>
    <string name="action_position">Follow</string>
    <string name="action_route">Route</string>
    <string name="action_create">Create point</string>
    <string name="str_not_implemented">Not implemented yet</string>
    <string name="action_route_safe">Safe</string>
    <string name="action_route_half_safe">Medium</string>
    <string name="action_route_unsafe">Unsafe</string>
    <string name="str_path_length">Distance: </string>
    <string name="action_place_here">Place here</string>
    <string name="action_close_route">Close route</string>
    <string name="str_hint_title">Title</string>
    <string name="str_hint_description">Description</string>
    <string name="str_hint_url">URL</string>
    <string name="str_point_action_mode">Place point</string>
    <string name="str_turn_left">Turn left after %s</string>
    <string name="str_turn_right">Turn right after %s</string>
    <string name="str_approaching">Approaching %s</string>

    <string name="hello_world">Hello world!</string>
    <string name="pref_storage_path_title">Storage</string>
    <string name="str_path_not_found">Path not found</string>
    <string name="str_data_refresh_complete">Data successfully refreshed</string>
    <string name="alert_location_not_available_title">Location unavailable</string>
    <string name="alert_location_not_available">Social navigator requires location providers to be enabled</string>
    <string name="str_configure">Configure</string>
    <string name="str_expand_panel">Click to view obstacles</string>
    <string name="str_collapse_panel">Click to hide obstacles</string>
    <string name="str_turn_in">Turn in</string>
    <string name="str_turn_forward">Move forward</string>
    <string name="str_next_obstacle">Next obstacle</string>
    <string name="str_no_obstacles">No obstacles</string>
    <string name="str_difficulty">Difficulty</string>
    <string name="action_open_categories">Show categories</string>
    <string name="action_open_map">Show map</string>
    <string name="str_refreshing_obstacles">Refreshing items</string>

    <plurals name="plural_meters">
        <item quantity="one">%d meter</item>
        <item quantity="many">%d meters</item>
        <item quantity="other">%d meters</item>
    </plurals>
    <plurals name="plural_kilometers">
        <item quantity="one">%d kilometer</item>
        <item quantity="many">%d kilometers</item>
        <item quantity="other">%d kilometers</item>
    </plurals>

    <plurals name="plural_obstacles">
        <item quantity="one">%d obstacle</item>
        <item quantity="many">%d obstacles</item>
        <item quantity="other">Obstacles: %d</item>
    </plurals>
    <string name="str_login_web_browser">Web browser</string>
    <string name="str_login_google">Google</string>
    <string name="str_google_login_web_error">Unknown login error.</string>
    <string name="str_google_login_error">Can\'t login using android account. Try web browser method.</string>
    <string name="str_google_login_success">Login successful</string>
    <string name="str_logout">Logout</string>
    <string name="about_text">This application is a part of grant KA432 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland.</string>
    <string name="str_version">Version:</string>
    <string name="str_publish_permission">You don\'t have permission to publish your points</string>
    <string name="str_logout_error">Logout error</string>
    <string name="title_cardiacare">CardiaCare</string>
    <integer name="com_vk_sdk_AppId">6035443</integer>
    <string name="make_screenshot">Send screenshot</string>
    <string name="permission_write_external_storage_message">Application requires access to external storage for temporary storage of downloaded files (maps, points, etc.).</string>
    <string name="permission_location_message">The application requires information about the location of the device for constructing routes, loading obstacles and positioning the map.</string>
    <string name="facebook_app_id" translatable="false">1671078956532973</string>
    <string name="tran_rough_road">Routh road</string>
    <string name="tran_border">Border</string>
    <string name="tran_crosswalk">Crosswalk</string>
    <string name="tran_traffic_light">Traffic light</string>
    <string name="tran_ramp">Ramp</string>
    <string name="tran_slope">Slope</string>
    <string name="tran_stairs">Stairs</string>
    <string name="warn_select_disability">Please set up disabilities to take into account obstacles in building the route</string>

</resources>
